# 2024-dig-ind-mini-project

./: README.md  noxfile.py  pyproject.toml
01_data_analysis/data/: Precipitation_Predictions.xlsx  measuring_values_.xlsx
01_data_analysis/data/comso_example/: 2021-05-17_0735_COSMO-E-all-stations.csv  2021-05-17_1337_COSMO-E-all-stations.csv  2021-05-17_1930_COSMO-E-all-stations.csv  2021-05-18_0630_COSMO-E-all-stations.csv  2021-05-18_1410_COSMO-E-all-stations.csv  2021-05-18_1931_COSMO-E-all-stations.csv  2021-05-19_0631_COSMO-E-all-stations.csv  2021-05-19_1338_COSMO-E-all-stations.csv  2021-05-19_1931_COSMO-E-all-stations.csv  2021-05-20_0633_COSMO-E-all-stations.csv  2021-05-20_1331_COSMO-E-all-stations.csv  2021-05-20_1930_COSMO-E-all-stations.csv  2021-05-21_0631_COSMO-E-all-stations.csv  2021-05-21_1334_COSMO-E-all-stations.csv  2021-05-21_1943_COSMO-E-all-stations.csv  2021-05-22_0804_COSMO-E-all-stations.csv  2021-05-22_1509_COSMO-E-all-stations.csv  2021-05-22_1975_COSMO-E-all-stations.csv
01_data_analysis/notebooks/: overview.ipynb
02_real_time_data/notebooks/: data_gathering.ipynb
03_nodered_test/: posting_junk.ipynb
